src/objects/Call_Report__c.object
<CustomObject>
    <fields>
        <fullName>Products_discussed_PREV__c</fullName>
        <description>SBU: Preventive, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Preventive</description>
        <label>Products discussed (PREV)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Assigned_To_User_Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABLAZIONE E TRATTAMENTI</fullName>
                </value>
                <value>
                    <fullName>ACCESSORI RADIOLOGIA</fullName>
                </value>
                <value>
                    <fullName>Anestadent</fullName>
                </value>
                <value>
                    <fullName>Anestethics</fullName>
                </value>
                <value>
                    <fullName>Cavitron</fullName>
                </value>
                <value>
                    <fullName>Cavitron Inserts</fullName>
                </value>
                <value>
                    <fullName>Cavitron Units</fullName>
                </value>
                <value>
                    <fullName>Desinfección (ZH/DS)</fullName>
                </value>
                <value>
                    <fullName>Disinfection</fullName>
                </value>
                <value>
                    <fullName>DISINFEZIONE E STERILIZZAZIONE</fullName>
                </value>
                <value>
                    <fullName>Fluorides</fullName>
                </value>
                <value>
                    <fullName>Hand instruments</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Infection Control</fullName>
                </value>
                <value>
                    <fullName>MIDWEST RDH Freedom</fullName>
                </value>
                <value>
                    <fullName>Nupro</fullName>
                </value>
                <value>
                    <fullName>Nupro Pastes/Varnish</fullName>
                </value>
                <value>
                    <fullName>Nupro White Varnish</fullName>
                </value>
                <value>
                    <fullName>ORAQIX</fullName>
                </value>
                <value>
                    <fullName>Oraqix Topical Anaesthetic</fullName>
                </value>
                <value>
                    <fullName>Other Preventive</fullName>
                </value>
                <value>
                    <fullName>Oxivir</fullName>
                </value>
                <value>
                    <fullName>Pastas/Barniz Nupro</fullName>
                </value>
                <value>
                    <fullName>Polishing</fullName>
                </value>
                <value>
                    <fullName>Practice Protect Instrument Disinfection &amp; Cleaning Liquid</fullName>
                </value>
                <value>
                    <fullName>Practice Protect Spray</fullName>
                </value>
                <value>
                    <fullName>Practice Protect Wipes</fullName>
                </value>
                <value>
                    <fullName>Prophy</fullName>
                </value>
                <value>
                    <fullName>PS2120 - Jet-Plus</fullName>
                </value>
                <value>
                    <fullName>PS2130 - Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_discussed_PROS__c</fullName>
        <description>SBU: Prosthetics, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Prosthetics</description>
        <label>Products discussed (PROS)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Assigned_To_User_Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acrylics</fullName>
                </value>
                <value>
                    <fullName>All Ceramics</fullName>
                </value>
                <value>
                    <fullName>Alloy</fullName>
                </value>
                <value>
                    <fullName>Artiplus</fullName>
                </value>
                <value>
                    <fullName>Atlantis/Implants</fullName>
                </value>
                <value>
                    <fullName>Attachements</fullName>
                </value>
                <value>
                    <fullName>Bench scanner</fullName>
                </value>
                <value>
                    <fullName>Bioplus</fullName>
                </value>
                <value>
                    <fullName>Biostabil</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>CCK</fullName>
                </value>
                <value>
                    <fullName>Celtra</fullName>
                </value>
                <value>
                    <fullName>Celtra Ceram</fullName>
                </value>
                <value>
                    <fullName>CELTRA DUO</fullName>
                </value>
                <value>
                    <fullName>Celtra Press</fullName>
                </value>
                <value>
                    <fullName>Celtra Press investment</fullName>
                </value>
                <value>
                    <fullName>Ceramco3</fullName>
                </value>
                <value>
                    <fullName>ceramic furnace</fullName>
                </value>
                <value>
                    <fullName>CERCON</fullName>
                </value>
                <value>
                    <fullName>Cercon base 98mm</fullName>
                </value>
                <value>
                    <fullName>Cercon ht</fullName>
                </value>
                <value>
                    <fullName>Cercon kiss</fullName>
                </value>
                <value>
                    <fullName>Cercon xt</fullName>
                </value>
                <value>
                    <fullName>Cercon xt ML</fullName>
                </value>
                <value>
                    <fullName>CEREC Tessera</fullName>
                </value>
                <value>
                    <fullName>Consumables lab</fullName>
                </value>
                <value>
                    <fullName>Crown &amp; Bridge</fullName>
                </value>
                <value>
                    <fullName>Denture Base</fullName>
                </value>
                <value>
                    <fullName>Denture Teeth</fullName>
                </value>
                <value>
                    <fullName>Digital Denture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_discussed_REST__c</fullName>
        <description>SBU: Restorative, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Restorative</description>
        <label>Products discussed (REST)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Assigned_To_User_Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D print</fullName>
                </value>
                <value>
                    <fullName>adhesion</fullName>
                </value>
                <value>
                    <fullName>Alginate ZH</fullName>
                </value>
                <value>
                    <fullName>Amalgam</fullName>
                </value>
                <value>
                    <fullName>Aquasil</fullName>
                </value>
                <value>
                    <fullName>Aquasil Codeless</fullName>
                </value>
                <value>
                    <fullName>Aquasil Ultra</fullName>
                </value>
                <value>
                    <fullName>Bite ZH</fullName>
                </value>
                <value>
                    <fullName>BLOCCHETTI CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Blocks CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Bonding</fullName>
                </value>
                <value>
                    <fullName>bulk fill</fullName>
                </value>
                <value>
                    <fullName>Burs</fullName>
                </value>
                <value>
                    <fullName>Calibra</fullName>
                </value>
                <value>
                    <fullName>Calibra Cements</fullName>
                </value>
                <value>
                    <fullName>Catalog of Restodontics</fullName>
                </value>
                <value>
                    <fullName>Celtra Duo</fullName>
                </value>
                <value>
                    <fullName>Cements</fullName>
                </value>
                <value>
                    <fullName>Ceram.x Spectra ST Effects</fullName>
                </value>
                <value>
                    <fullName>Ceram.x Spectra ST Flow</fullName>
                </value>
                <value>
                    <fullName>Ceram.x Spectra ST HV/LV</fullName>
                </value>
                <value>
                    <fullName>Ceram.X Spheretec</fullName>
                </value>
                <value>
                    <fullName>Ceram.X UNIVERSAL</fullName>
                </value>
                <value>
                    <fullName>CERAM X MONO/UNIVERSAL</fullName>
                </value>
                <value>
                    <fullName>CEREC MTL</fullName>
                </value>
                <value>
                    <fullName>Class II</fullName>
                </value>
                <value>
                    <fullName>Composites</fullName>
                </value>
                <value>
                    <fullName>CONSERVATIVA</fullName>
                </value>
                <value>
                    <fullName>Core&amp;Post</fullName>
                </value>
                <value>
                    <fullName>Curing Lights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_discussed_TRCE__c</fullName>
        <label>Products discussed (TRCE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Assigned_To_User_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Axano</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>intego</fullName>
                    <label>Intego</label>
                </value>
                <value>
                    <fullName>INTEGO Ambidextrous</fullName>
                </value>
                <value>
                    <fullName>Intego Pro</fullName>
                </value>
                <value>
                    <fullName>INTEGO PRO Ambidextrous</fullName>
                </value>
                <value>
                    <fullName>Intego Pro CS</fullName>
                </value>
                <value>
                    <fullName>Intego Pro TS</fullName>
                </value>
                <value>
                    <fullName>Intego Pro Turn</fullName>
                </value>
                <value>
                    <fullName>SIM UNITS</fullName>
                </value>
                <value>
                    <fullName>Sinius</fullName>
                </value>
                <value>
                    <fullName>Sinius CS</fullName>
                </value>
                <value>
                    <fullName>Sinius TS</fullName>
                </value>
                <value>
                    <fullName>Teneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFE_Type__c</fullName>
        <description>This field has been created for SFE purposes in Japan</description>
        <inlineHelpText>Please specify the SFE Type of your Event</inlineHelpText>
        <label>SFE Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Assigned_To_User_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No SFE</fullName>
                </value>
                <value>
                    <fullName>SFE Lead</fullName>
                </value>
                <value>
                    <fullName>SFE CEREC</fullName>
                </value>
                <value>
                    <fullName>SFE Imaging</fullName>
                </value>
                <value>
                    <fullName>SFE TC</fullName>
                </value>
                <value>
                    <fullName>SFE Implants</fullName>
                </value>
                <value>
                    <fullName>SFE Consumables</fullName>
                </value>
                <value>
                    <fullName>SFE Ortho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIMPLANT_Hardware__c</fullName>
        <formula>INCLUDES( Products_discussed_IMPL__c , &quot;SIMPLANT Hardware&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIMPLANT Hardware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Software__c</fullName>
        <formula>INCLUDES( Products_discussed_IMPL__c , &quot;SIMPLANT Software&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIMPLANT Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>200324 test start datetime field to be used to populate Event.StartDateTime</description>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>TFUS-000002466</description>
        <inlineHelpText>Leave the subject blank to have Salesforce use your default subject</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symbios__c</fullName>
        <formula>INCLUDES( Products_discussed_IMPL__c , &quot;Symbios&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symbios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeldOne__c</fullName>
        <formula>INCLUDES( Products_discussed_IMPL__c , &quot;WeldOne&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeldOne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XiVE__c</fullName>
        <formula>INCLUDES( Products_discussed_IMPL__c , &quot;XiVE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XiVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>track_event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>can be used to track events individually by country</description>
        <inlineHelpText>check the box if you want to track this event</inlineHelpText>
        <label>track event</label>
        <type>Checkbox</type>
    </fields>
    <label>Call Report</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Call Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reports</pluralLabel>
    <recordTypes>
        <fullName>Call_Report_CFE_2_0</fullName>
        <active>true</active>
        <description>CFE 2.0 - should be set as default record type for CFE 2.0 users.</description>
        <label>Call Report CFE 2.0</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_Group_Empty</fullName>
        <active>false</active>
        <description>Test validation rule</description>
        <errorConditionFormula>ISBLANK(ProductGroup__c )</errorConditionFormula>
        <errorMessage>You need to select at least one Product Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateTime_AFTER_EndDateTime</fullName>
        <active>true</active>
        <description>CFE 2.0 - Validate that start date is before end date.</description>
        <errorConditionFormula>StartDateTime__c &gt;  EndDateTime__c</errorConditionFormula>
        <errorMessage>End time must be after the start</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateTime_IN_FUTURE</fullName>
        <active>true</active>
        <description>CFE 2.0 - Start date cannot be set to the future, since we are reporting on a completed event.</description>
        <errorConditionFormula>StartDateTime__c &gt; NOW()</errorConditionFormula>
        <errorDisplayField>StartDateTime__c</errorDisplayField>
        <errorMessage>Please select a date and time in the past.</errorMessage>
    </validationRules>
</CustomObject>